...
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/totaligtv"
            tools:layout_editor_absoluteX="8dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:listitem="@layout/step_view">

        </android.support.v7.widget.RecyclerView>
...
