...
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/video_view"
        tools:layout_editor_absoluteX="8dp" />


    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:src="@drawable/next"
...
